<resources>
    <string name="app_name" translatable="false">Wi-Fi Finder</string>

    <string name="action_scan">Scan</string>
    <string name="dialog">The scan function works using the \'WIFI WPS WPA TESTER\' app that is not installed in this device, you want to install the app?</string>
    <string name="yes">Yes</string>
    <string name="no" translatable="false">No</string>

    <!-- main_warning -->
    <string name="warning">Warning</string>
    <string name="warning_content">Please enable Gps to be approved by the settings</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>

    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="translate">Translate</string>
    <string name="source_code">Source Code</string>
    <string name="support">Support</string>
    <string name="donate">Donate</string>
    <string name="author">Author</string>

    <!-- ErrorConnectionActivity -->
    <string name="errorconnection">No internet connection</string>
    <string name="errorconnection_one">Reconnect your device and try again…</string>
    <string name="reload">Charging</string>

    <string name="toast">Name of the network is too short (min 1 character)</string>
    <string name="toast2">Password too short (Min 8 characters)</string>
    <string name="toast3">Posizione Not Valid</string>
    <string name="toast4">Reconnect to the Internet and try …</string>
    <string name="toast5">Activate wifi to scan</string>
    <string name="toast6">Copied password</string>
    <string name="share">Share…</string>

    <string name="radioButton">Text</string>
    <string name="radioButton2">Wi-Fi Opened</string>
    <string name="radioButton3">Doesn\'t work</string>
    <string name="share_text">Found by Wi-Fi Finder</string>

    <string name="email_message">I would like to report this network: \n\nCountry: %s\nSSID: %s\nPassword: %s</string>

    <string name="add_wifi_network">Add Wi-Fi network</string>
    <string name="add_wifi">Add SSID Wi-Fi</string>
    <string name="add">Add</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="menu" translatable="false">Menu</string>
    <string name="disable_notifications">Notifications</string>
    <string name="toast_notification">Notifications: %s</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>

    <string name="instagram">Follow me on Instagram</string>
    <string name="play_store">Rate on the Play Store</string>

    <string translatable="false" name="notification_channel_id">default</string>

    <string name="wifi_found">Networks available</string>

</resources>
